@@ -107,7 +107,7 @@ $lang = [
     'gl_crazy_' => 'CrazyHour',
     'gl_crazy_ends' => 'Ends in',
     'gl_crazy_at' => 'at',
-    'gl_crazy_message4' => 'Crazyhour...All torrents free',
+    'gl_crazy_message4' => 'All torrents free',
     'gl_crazy_message5' => 'and triple upload credit!',
     'gl_crazy_message6' => 'starts in',
     'gl_happyhour' => 'HappyHour',
