@@ -106,7 +106,7 @@ $lang = [
     'gl_crazy_' => 'Ora nebun&#259;',
     'gl_crazy_ends' => 'Se termina &#238;n',
     'gl_crazy_at' => 'la',
-    'gl_crazy_message4' => 'Ora Nebuna...Toate torentele sunt free',
+    'gl_crazy_message4' => 'Toate torentele sunt free',
     'gl_crazy_message5' => '&#351;i vei primi triplu credit de upload!',
     'gl_crazy_message6' => '&#238;ncepe &#238;n',
     'gl_happyhour' => 'Ora Vesel&#259;',
