@@ -1,3 +1,6 @@
+9 Jul 2018
+fix: crazyhour global message
+
 8 Jul 2018
 fix: get empty image get_body_image()
 fix: avatar max-width
